force-app/main/default/objects/Job_Application_Task__c/Job_Application_Task__c.object-meta.xml
<CustomObject>
    <description>Custom sObject containing the &apos;metadata&apos; for the Tasks assigned at different Job Application Statuses.</description>
    <label>Job Application Task</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Application Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>