force-app/main/default/objects/Job_Application_Task__c/fields/Due_Date_Adjust__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Adjust__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to adjust the Due Date (ActivityDate) of a Task.</description>
    <label>Due Date Adjust</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>