force-app/main/default/objects/Job_Application_Task__c/fields/Job_Appl_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Appl_Status__c</fullName>
    <label>Job Appl Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Application_Status</valueSetName>
    </valueSet>
</CustomField>