force-app/main/default/objects/Job_Application_Task__c/fields/Task_Comment__c.field-meta.xml
<CustomField>
    <fullName>Task_Comment__c</fullName>
    <inlineHelpText>Will appear in Task Comment field (API name &apos;Description&apos;.</inlineHelpText>
    <label>Task Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>