force-app/main/default/objects/Job_Application_Task__c/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <inlineHelpText>Will appear in Task Subject field</inlineHelpText>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>