force-app/main/default/objects/Job_Application_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Job_Appl_Status__c</columns>
    <columns>Task_Subject__c</columns>
    <columns>Task_Comment__c</columns>
    <columns>Task_Priority__c</columns>
    <columns>Due_Date_Adjust__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>